--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -16714,3 +16714,60 @@ img {
 .no-cursor {
   cursor: not-allowed;
 }
+
+.slick-prev:before, .slick-next:before {
+  color: #3b3939 !important;
+  font-size: 40px !important;
+  margin: -10px !important;
+}
+
+.slider-wrapper {
+  margin: 0 auto;
+  width: 95%;
+}
+
+.slider-item {
+  padding: 8px;
+}
+
+/* Skeleton Loading for Hot Collections */
+.hot-coll__skeleton-item {
+  width: 100%;
+}
+
+.hot-coll__skeleton-img {
+  width: 100%;
+  height: 90%;
+}
+
+.hot-coll__skeleton-pp {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.hot-coll__skeleton-title {
+  height: 20px;
+  width: 30%;
+  margin: 8px auto;
+  display: block
+}
+
+.hot-coll__skeleton-code {
+  height: 20px;
+  width: 20%;
+  display: block;
+  margin: 4px auto;
+}
+
+@media (min-width: 992px) {
+  .hot-coll__skeleton-item {
+    width: 25%;
+  }
+}
+
+@media (min-width: 576px) {
+  .hot-coll__skeleton-item {
+    width: 50%;
+  }
+}
