Completed NewItems section

--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -12707,6 +12707,7 @@ a.read_more i {
 .switch {
   margin-bottom: -5px;
   -webkit-appearance: none;
+  appearance: none;
   height: 24px;
   width: 44px;
   background-color: #eeeeee;
@@ -15145,7 +15146,10 @@ a.btn-slider:hover {
   margin: 0 6px;
   display: inline-block;
   zoom: 1;
+  display: inline;
+  /*
   *display: inline;
+  */
 }
 
 .testi-slider .flex-control-paging li a {
@@ -16727,7 +16731,7 @@ img {
 }
 
 .slider-item {
-  padding: 8px;
+  padding: 0 8px;
 }
 
 /* Skeleton Loading for Hot Collections */
@@ -16770,4 +16774,57 @@ img {
   .hot-coll__skeleton-item {
     width: 50%;
   }
+}
+
+/* New Item Section */
+
+.new-item__card {
+  padding: 0 8px;
+}
+
+/* new img skeleton */
+
+.new-item__img-skel {
+  width: 100%;
+  height: 80%;
+  align-items: start;
+  margin: -4px;
+}
+
+.new-item__skel_wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 400px;
+  margin: 0 8px;
+}
+
+.new-item__skel_info-wrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 40%;
+  justify-content: flex-end;
+}
+
+.new-item__name-skel {
+  height: 20px;
+  width: 40%;
+}
+
+.new-item__price-skel {
+  height: 15px;
+  width: 30%;
+}
+
+.new-item__like-skel {
+  height: 15px;
+  width: 30px;
+}
+
+.new-item__skel_info-wrap2 {
+  display: flex;
+  margin-top: 8px;
+  justify-content: space-between;
 }
