--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -16828,3 +16828,27 @@ img {
   margin-top: 8px;
   justify-content: space-between;
 }
+
+/* Top Sellers */ 
+
+.skel_info_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.author_name_skel {
+  width: 100px;
+  height: 20px;
+  margin-bottom: 8px;
+}
+
+.author_price_skel {
+  width: 40px;
+  height: 20px;
+}
+
+.author_pp_skel {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
